tests/parser/fail/v22_fail_for_range_step.ep
# COMPILE_FAIL: Expected LBRACE
fun main(): void {
    for i: 0:10:2 {
    }
}
